[tool.poetry]
name = "asgi-correlation-id-celery-extension"
version = "4.0.0"
description = "Celery extension for asgi-correlation-id"
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
maintainers = ["Jonas Krüger Svensson <jonas-ks@hotmail.com>"]
license = "BSD-4-Clause"
homepage = "https://github.com/snok/asgi-correlation-id"
repository = "https://github.com/snok/asgi-correlation-id"
packages = [{ include = "src" },]

[tool.poetry.dependencies]
python = "^3.7"
celery = '*'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
