[tool.poetry]
name = "asgi-correlation-id-sentry-extension"
version = "4.0.0"
description = "Sentry extension for asgi-correlation-id"
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
maintainers = ["Jonas Krüger Svensson <jonas-ks@hotmail.com>"]
license = "BSD-4-Clause"
homepage = "https://github.com/snok/asgi-correlation-id"
repository = "https://github.com/snok/asgi-correlation-id"
packages = [{ include = "src" },]

[tool.poetry.dependencies]
python = "^3.7"
sentry-sdk = '*'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
